@@ -1,3 +1,6 @@
+2001-10-29  Cristy  <cristy@mystic.es.dupont.com>
+	* ImageMagick now has a registry for storing image blobs.
+
 2001-10-26  Cristy  <cristy@mystic.es.dupont.com>
 	* Added VMS patches (thanks to Jouk Jansen).
 
